--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,4 +8,4 @@ install:
   - npm install  # команда установки зависимостей
 build: off  # отключаем встроенную в appveyor систему сборки
 test_script:
-  - npm run lint && npm test  # скрипт тестирования
+  - npm run lint  # скрипт тестирования
